# nodemangler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  PLAN.md  PLAN_LOGIC_NODES.md  README.md  append_tests.py  append_tests2.py  append_tests3.py  append_tests4.py  fix_tests.py  suggestions_from_test.md  todo.md  watch.bat  watch.sh
app/: .env  Cargo.toml  watch.bat  watch.sh
app/crates/mangler_cli/: Cargo.toml  README.md
app/crates/mangler_cli/src/: cli.rs  commands.rs  commands_tests.rs  format.rs  format_tests.rs  helpers.rs  helpers_tests.rs  image_stats.rs  image_stats_tests.rs  main.rs  value_parse.rs  value_parse_tests.rs
app/crates/mangler_core/: Cargo.toml  LICENSE-MIT  README.md
app/crates/mangler_core/docs/: video-setup.md
app/crates/mangler_core/examples/: perf_bench.rs
app/crates/mangler_core/src/: app.rs  app_tests.rs  curve.rs  curve_tests.rs  dynamic_image_serde.rs  dynamic_image_serde_tests.rs  float_image.rs  float_image_serde.rs  float_image_serde_tests.rs  float_image_tests.rs  graph.rs  graph_tests.rs  input.rs  input_tests.rs  lib.rs  naming.rs  naming_tests.rs  node.rs  node_settings.rs  node_tests.rs  node_type.rs  output.rs  output_tests.rs  render.rs  run_context.rs  saved_nodes.rs  saved_nodes_tests.rs  thumbnail_service.rs  thumbnail_service_tests.rs  value.rs  value_tests.rs  version.rs  version_tests.rs
app/crates/mangler_core/src/color/: blend.rs  blend_tests.rs  mod.rs
app/crates/mangler_core/src/operations/: mod.rs  operations_tests.rs  sub_graph.rs
app/crates/mangler_core/src/tests/: all_operations_perf_tests.rs  mod.rs  perf_tests.rs  serialization_tests.rs
app/crates/mangler_core/src/video/: decoder_cache.rs  decoder_cache_tests.rs  encoder.rs  encoder_tests.rs  mod.rs
app/crates/mangler_core/test_data/: gradient_4x4.jxl
app/crates/mangler_gui/: Cargo.toml  README.md
app/crates/mangler_gui/src/: app.rs  app_tests.rs  config.rs  config_tests.rs  main.rs  pan_zoom.rs  program.rs  program_tests.rs
app/crates/mangler_gui/src/app_menu/: app_menu.rs  mod.rs
app/crates/mangler_gui/src/graph/: clipboard.rs  clipboard_tests.rs  graph_editor.rs  graph_editor_tests.rs  graph_input.rs  graph_node.rs  graph_node_header.rs  graph_node_info.rs  graph_node_tests.rs  graph_node_thumbnail.rs  graph_output.rs  mod.rs  node_search_popup.rs  node_search_popup_tests.rs
app/crates/mangler_gui/src/libraries/: libraries_panel.rs  libraries_state.rs  libraries_state_tests.rs  library.rs  library_scanner.rs  library_scanner_tests.rs  library_tests.rs  mod.rs
app/crates/mangler_gui/src/node_menu/: menu_item.rs
app/crates/mangler_gui/src/panels/: mod.rs  panel_kind.rs  panel_tree.rs  panel_tree_tests.rs  panel_view.rs  panel_windows.rs
app/crates/mangler_gui/src/settings/: api_keys_panel.rs  graph_settings_panel.rs  graph_settings_panel_tests.rs  histogram_widget.rs  histogram_widget_tests.rs  mod.rs  node_settings_panel.rs  section.rs  tone_curve_widget.rs
app/crates/mangler_gui/src/themes/: mod.rs  theme.rs  theme_dark.rs  theme_dark_green.rs  theme_light.rs  theme_light_blue.rs
app/crates/mangler_gui/src/view_window/: arcball_camera.rs  arcball_camera_tests.rs  curve_overlay.rs  curve_overlay_tests.rs  depth_fragment.glsl  environment.rs  environment_tests.rs  fragment.glsl  gl_renderer.rs  gl_renderer_tests.rs  image_viewer.rs  material_channels.rs  material_channels_tests.rs  mod.rs  preview_2d.rs  preview_3d.rs  ssao_blur_fragment.glsl  ssao_fragment.glsl  ssao_gbuffer_fragment.glsl  ssao_gbuffer_vertex.glsl  vertex.glsl  view_panel.rs  viewer_3d.rs  viewer_3d_tests.rs  viewer_settings.rs  viewer_settings_tests.rs
app/crates/mangler_tui/: Cargo.toml
app/crates/mangler_tui/src/: cli.rs  commands.rs  commands_tests.rs  format.rs  format_tests.rs  helpers.rs  helpers_tests.rs  main.rs  main_tests.rs  value_parse.rs  value_parse_tests.rs
crates/mangle/: Cargo.toml
crates/mangle/src/: main.rs
crates/mangler/: Cargo.toml  README.md
crates/mangler/src/: .rs  app.rs  dynamic_image_serde.rs  graph.rs  graph_tests.rs  input.rs  lib.rs  node.rs  node_attributes.rs  node_settings.rs  node_type.rs  operation.rs  output.rs  thumbnail.rs  value.rs
crates/mangler/src/color/: blend.rs  color_space.rs  mod.rs
crates/mangler/src/color/color_spaces/: cmyk.rs  hsl.rs  hsv.rs  lab.rs  lch.rs  mod.rs  rgb_linear.rs  srgb.rs  xyz.rs  yuv.rs
crates/mangler/src/nodes/: add.rs  float.rs  image_from_clipboard.rs  image_from_url.rs  image_resize.rs  integer.rs  mod.rs  node.rs  node_settings.rs  operation.rs  subtract.rs
crates/mangler/src/operations/: add.rs  float.rs  image_from_clipboard.rs  image_from_url.rs  image_resize.rs  input_integer.rs  integer.rs  mod.rs  sub_graph.rs  subtract.rs  text_from_clipboard.rs
crates/mangler/src/tests/: graph_tests.rs  mod.rs  operations_tests.rs  perf_tests.rs  serialization_tests.rs
crates/nodemangler/: Cargo.toml  README.md
crates/nodemangler/src/: app.rs  main.rs  menu.rs  menu_button.rs  program.rs  theme.rs  title_bar.rs
crates/nodemangler/src/app_bar/: bar.rs
crates/nodemangler/src/app_menu/: app_menu.rs  mod.rs  settings_menu.rs
crates/nodemangler/src/graph/: graph_editor.rs  graph_input.rs  graph_node.rs  graph_node_header.rs  graph_node_info.rs  graph_node_thumbnail.rs  graph_output.rs  mod.rs
crates/nodemangler/src/menu/: menu_button.rs  menu_category.rs  menu_item.rs  menu_panel.rs  mod.rs
crates/nodemangler/src/node_menu/: menu_item.rs  menu_panel.rs
crates/nodemangler/src/node_settings/: mod.rs  node_settings_panel.rs
crates/nodemangler/src/settings/: graph_settings_panel.rs  mod.rs  node_settings_panel.rs  settings_panel.rs
crates/nodemangler/src/themes/: mod.rs  theme.rs  theme_dark.rs  theme_dark_green.rs  theme_light.rs  theme_light_blue.rs
crates/nodemangler/src/view/: mod.rs  view_panel.rs
crates/nodemangler/src/view_window/: color_viewer.rs  image_viewer.rs  mod.rs  text_viewer.rs  view_panel.rs
website/: .dockerignore  Cargo.toml  Dockerfile  deploy.bat  deploy.sh
website/src/: main.rs
website/static/: index.html  style.css
(+1463 files in other folders)
