[workspace]
resolver = "2"

members = [
    "crates/mangler_core",
    "crates/mangler_cli",
    "crates/mangler_gui",
]

# Shared metadata inherited by every crate (`version.workspace = true` etc.).
# This is THE version number for the whole project — bump it here (or run
# scripts/release.sh, which does it for you).
[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dan335/nodemangler"
authors = ["Daniel Phillips <danphi@gmail.com>"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
panic = "abort"
# Disable incremental compilation to avoid a nightly-rustc + MSVC linker bug
# where stale cached `anon.*.llvm.*` symbols from a previous build fail to
# resolve after the symbol table changes. Trade: ~10-30% slower rebuilds for
# guaranteed correctness. Remove if upstream rustc fixes this.
incremental = false

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2
