[workspace]
resolver = "2"

members = [
    "crates/mangler_core",
    "crates/mangler_cli",
    "crates/mangler_gui",
]

# Shared metadata inherited by every crate (`version.workspace = true` etc.).
# This is THE version number for the whole project — bump it here (or run
# scripts/release.sh, which does it for you).
[workspace.package]
version = "1.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dan335/nodemangler"
authors = ["Daniel Phillips <danphi@gmail.com>"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# No `panic = "abort"` here: cargo forces unwind for test builds, so setting
# abort makes `cargo test` + `cargo run` compile two variants of every
# workspace crate per cycle. Release uses the default (unwind) too.
#
# Incremental is the default (on). It was disabled 2025-ish to work around a
# nightly-rustc + MSVC linker bug (stale `anon.*.llvm.*` symbols); we're on
# stable now. If that linker error resurfaces on Windows, build with
# CARGO_INCREMENTAL=0 there instead of turning it off for everyone.

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 2
