[package]
name = "mangle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mangle"
path = "src/main.rs"

[dependencies]
mangler = { path = "../mangler" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
glam = "0.32"
