[package]
name = "mangler"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoid = "0.4.0"
image = "0.24.6"
tokio = { version = "1", features = ["rt-multi-thread"] }
arboard = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.24", features = ["serde"] }
async-recursion = "1.0.4"
reqwest = "0.11.18"

[patch.crates-io]
"image" = { git = 'https://github.com/oovm/image.git' }
