[package]
name = "mangler"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoid = "0.4"
image = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arboard = "3.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
glam = { version = "0.32", features = ["serde"] }
async-recursion = "1.0.4"
reqwest = "0.13"
imageproc = "0.23"
fastrand = "2"
noise = "0"
ab_glyph = "0.2"
