[package]
name = "nodemangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["puffin"] }
epaint = "0.21.0"
image = "0.24.6"
mangler = { path = "../mangler" }
puffin = "0.15.0"
puffin_egui = "0.21.0"
time = "0.3.21"
tokio = { version = "1", features = ["full"] }
