[package]
name = "nodemangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22", features = [] }
epaint = "0.22"
image = "0.24.6"
mangler = { path = "../mangler" }
puffin = "0.15.0"
puffin_egui = "0.22"
rfd = "0.11.4"
sanitize-filename = "0.4.0"
time = "0.3"
glam = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
egui-phosphor = "0.1.1"
fastrand = "2.0"
egui_extras = "0.22.0"

[patch.crates-io]
"image" = { git = 'https://github.com/oovm/image.git' }
