[package]
name = "nodemangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.33", features = [] }
epaint = "0.33"
image = "0.24"
mangler = { path = "../mangler" }
puffin = "0.19"
rfd = "0.17"
sanitize-filename = "0.6"
time = "0.3"
glam = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
egui-phosphor = "0.11"
fastrand = "2.0"
egui_extras = "0.33"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
