[package]
name = "mangler_cli"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "NodeMangler headless CLI: run node graphs without the GUI."
repository = "https://github.com/dan335/nodemangler"
authors = ["Daniel Phillips <danphi@gmail.com>"]

[[bin]]
name = "mangler_cli"
path = "src/main.rs"

[dependencies]
mangler_core = { path = "../mangler_core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
glam = "0.32"
image = "0.25"
