[package]
name = "mangler_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NodeMangler headless CLI: run node graphs without the GUI."

[[bin]]
name = "mangler_cli"
path = "src/main.rs"

[dependencies]
mangler_core = { path = "../mangler_core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
glam = "0.32"
image = "0.25"
