[package]
name = "mangler_core"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoid = "0.5"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arboard = "3.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
glam = { version = "0.32", features = ["serde"] }
async-recursion = "1.0.4"
reqwest = "0.13"
imageproc = "0.26"
fastrand = "2"
noise = "0.9"
ab_glyph = "0.2"
rayon = "1"
dashmap = "6"
video-rs = { version = "0.11", features = ["ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }
# Direct ffmpeg-next dep (pinned to the version video-rs 0.11 pulls in so cargo
# unifies the resolve). Used for reading container/codec metadata on the input
# path — video-rs doesn't re-export these accessors.
ffmpeg-next = { version = "8.0", optional = true }

[features]
default = []
# Enables video input/output operations. Requires FFmpeg development libraries
# on the system (set FFMPEG_DIR or install via vcpkg). See docs/video-setup.md.
video = ["dep:video-rs", "dep:ndarray", "dep:ffmpeg-next"]

[dev-dependencies]
filetime = "0.2"
