[package]
name = "mangler_core"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core engine for NodeMangler: a value system, async node-graph executor, and a large library of image, color, and noise operations with 14-color-space conversions."
repository = "https://github.com/dan335/nodemangler"
readme = "README.md"
authors = ["Daniel Phillips <danphi@gmail.com>"]
keywords = ["image-processing", "node-graph", "color", "noise", "graphics"]
categories = ["multimedia::images", "graphics"]

[dependencies]
nanoid = "0.5"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arboard = "3.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
glam = { version = "0.32", features = ["serde"] }
async-recursion = "1.0.4"
reqwest = "0.13"
imageproc = "0.26"
fastrand = "2"
noise = "0.9"
ab_glyph = "0.2"
rayon = "1"
dashmap = "6"

[dev-dependencies]
filetime = "0.2"
