[package]
name = "mangler_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core engine for NodeMangler: a value system, async node-graph executor, and a large library of image, color, and noise operations with 14-color-space conversions."
readme = "README.md"
keywords = ["image-processing", "node-graph", "color", "noise", "graphics"]
categories = ["multimedia::images", "graphics"]

[dependencies]
nanoid = "0.5"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arboard = "3.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
glam = { version = "0.32", features = ["serde"] }
reqwest = "0.13"
fastrand = "2"
noise = "0.9"
ab_glyph = "0.2"
rayon = "1"
dashmap = "6"
jxl-oxide = "0.12.6"
psd = "0.3.5"

[dev-dependencies]
filetime = "0.2"
