[package]
name = "mangler_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "wayland", "x11", "accesskit"] }
egui_glow = "0.34"
epaint = "0.34"
glow = "0.17"
image = "0.25"
mangler_core = { path = "../mangler_core", features = ["video"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
puffin = "0.19"
rfd = "0.17"
sanitize-filename = "0.6"
time = "0.3"
glam = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
egui-phosphor = "0.12"
fastrand = "2.0"
egui_extras = "0.34"
dirs = "6"
rayon = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
