[package]
name = "mangler_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mangler_tui"
path = "src/main.rs"

[dependencies]
mangler_core = { path = "../mangler_core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
glam = "0.32"
